--- a/RIBOflaskapp/static/css/style_unicam.css
+++ b/RIBOflaskapp/static/css/style_unicam.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: inherit;
+    font-family: montserrat;
 }
 nav{
     position: fixed;
@@ -10,34 +10,31 @@ nav{
     left: 0;
     width: 100%;
     height: 70px;
-    background: #12283f;
+    background: #1b3b5d;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
-
 nav .navbar{
     height: 100%;
     max-width: 1250px;
-    margin:auto;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 50px;
 }
-nav .navbar . logo a{
-    color: #b0cbe8;
+nav .navbar .logo a{
+    color: white;
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 600;
     text-decoration: none;
 }
-
-nav .navbar .nav-links {
+nav .navbar .nav-links{
     height: 100%;
-    line-height: 70px ;
+    line-height:70px ;
 }
-
-nav .navbar .nav-links .links {
+nav .navbar .nav-links .links{
     display: flex;
 }
-
 nav .navbar .nav-links .links li{
     position: relative;
     display: flex;
@@ -45,12 +42,112 @@ nav .navbar .nav-links .links li{
     list-style: none;
     padding: 0 14px;
 }
-
 nav .navbar .nav-links .links li a{
-    color: #b0cbe8;
+    height: 100%;
+    color: #fff;
     text-decoration: none;
     white-space: nowrap;
-
+    font-size: 16px;
+    font-weight: 500;
+}
+nav .navbar .nav-links .links li .arrow{
+    height: 100%;
+    width: 22px;
+    text-align: center;
+    color: white;
+    line-height: 70px;
+    transition: all 0.3s ease ;
+}
+nav .navbar .nav-links .links li:hover .htmlcss-arrow,
+nav .navbar .nav-links .links li:hover .js-arrow{
+    transform: rotate(180deg);
+}
+.navbar .nav-links .links .sub-menu{
+    position:absolute;
+    top: 70px;
+    left: 0;
+    background: #1b3b5d;
+    line-height: 40px;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    display: none;
+}
+.navbar .nav-links .links .sub-menu li{
+    padding: 0 29px;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+}
+.navbar .nav-links .links .sub-menu li a{
+    font-size: 15px;
+}
+.navbar .nav-links .links .sub-menu li .more-arrow{
+    line-height: 40px;
+}
+nav .navbar .nav-links .links li:hover .htmlCss-sub-menu,
+nav .navbar .nav-links .links li:hover .js-sub-menu{
+    display: block;
+}
+.navbar .nav-links .links .more .more-sub-menu{
+    position: absolute;
+    top: 0;
+    left: 100%;
+    border-radius: 0 4px 4px 4px;
+    display: none;
+}
+.navbar .nav-links .links .more:hover .more-sub-menu{
+    display: block;
+}
+.nav-links .sidebar-logo .logo_name{
+    display: none;
+}
+    .navbar .fa-bars,
+    .nav-links .sidebar-logo .fa-times{
+        display: none;
+    }
+@media (max-width:954px) {
+    nav .navbar{
+        max-width: 100%;
+        padding: 0 25px;
+    }
+    nav .navbar .logo a{
+        font-size: 26px;
+    }
+    nav .navbar .nav-links .links li{
+        padding: 0 10px;
+    }
+    nav .navbar .nav-links .links li a{
+    font-size: 15px;
+    }
 }
 
-/*minuto 9.01*/
+@media (max-width:800px){
+    nav .navbar .nav-links{
+        display: block;
+        position: fixed;
+        background: #1b3b5d;
+        top: 0;
+        left:-100%;
+        max-width: 270px;
+        padding: 20px;
+        line-height: 40px;
+    }
+    nav .navbar .nav-links .sidebar-logo{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    nav-links .sidebar-logo .logo_name{
+      color: white;
+        font-size: 25px;
+        font-width: 500;
+    }
+    .navbar .fa-bars,
+    .nav-links .sidebar-logo .fa-times{
+        color: white;
+        font-size: 25px;
+        font-width: 500;
+    }
+    nav .navbar .nav-links .links{
+        display: block;
+        margin-top: 20px;
+    }
+}
