--- a/RIBOflaskapp/templates/search_results.html
+++ b/RIBOflaskapp/templates/search_results.html
@@ -21,12 +21,15 @@
         <label for="db"> db format</label><br>
         <input class="check_button_format" type="checkbox" id="db_nh" value="nH.db">
         <label for="db_nh"> db-nH format</label><br>
-        <button type="button"  id="dl_button" onclick="download_file_from_db(),download_csv_from_db()">Download</button>
+        <button type="button"  id="dl_button" onclick="download_file_from_db(), download_csv_from_db()">Download</button>
+        <progress id="progress_bar" value=gino_value max="100" min="0" ></progress>
+        <p>{{ gino_value }}</p>
+
     </div>
     <div id="choose_taxonomy_div">
         <input type="radio" class="check_button_taxonomy" name="taxonomy_button" id="SILVA" value="SILVA">
         <label for="SILVA"> SILVA taxonomy</label><br>
-        <input type="radio" class="check_button_taxonomy" name="taxonomy_button" id="ENA" value="ENA">
+        <input type="radio" class="check_button_taxonomy" name="taxonomy_button" id="ENA" value="ENA" checked>
         <label for="ENA"> ENA taxonomy</label><br>
         <input type="radio" class="check_button_taxonomy" name="taxonomy_button" id="LTP" value="LTP">
         <label for="LTP"> LTP taxonomy</label><br>
