--- a/RIBOflaskapp/templates/nav_bar_prova.html
+++ b/RIBOflaskapp/templates/nav_bar_prova.html
@@ -10,50 +10,14 @@
 </head>
 <body>
     <nav>
-       <div class="navbar">
-           <i class="fas fa-bars"></i>
-           <div class="logo"><a href="#">RIBO</a></div>
-           <div class="nav-links">
-               <div class="sidebar-logo">
-                   <span class="logo_name">RIBO</span>
-                   <i class="fas fa-times"></i>
-               </div>
-               <ul class="links">
-                   <li><a href="#">HOME</a></li>
-                   <li>
-                       <a href="#">HTLM & CSS</a>
-                       <i class="fas fa-caret-down arrow htmlcss-arrow"></i>
-                       <ul class="htmlCss-sub-menu sub-menu">
-                           <li><a href="#">Web Design</a></li>
-                           <li><a href="#">Login Form </a></li>
-                           <li><a href="#">Card Design</a></li>
-                           <li class="more">
-                               <a href="#">More</a>
-                               <i class="fas fa-caret-right arrow more-arrow"></i>
-                               <ul class="more-sub-menu sub-menu">
-                                   <li><a href="#">Dynamic Calculator</a></li>
-                                   <li><a href="#">Form Validation </a></li>
-                                   <li><a href="#">Calendar</a></li>
-                                   <li><a href="#">Digital Clock</a></li>
-                            </ul>
-                           </li>
-                       </ul>
-                   </li>
-                   <li>
-                       <a href="#">JAVASCRIPT</a>
-                       <i class="fas fa-caret-down arrow js-arrow"></i>
-                       <ul class="js-sub-menu sub-menu">
-                           <li><a href="#">Dynamic Calculator</a></li>
-                           <li><a href="#">Form Validation </a></li>
-                           <li><a href="#">Calendar</a></li>
-                           <li><a href="#">Digital Clock</a></li>
-                       </ul>
-                   </li>
-                   <li><a href="#">ABOUT US</a></li>
-                   <li><a href="#">CONTACT US</a></li>
-               </ul>
-           </div>
-       </div>
+        <div class="logo">RIBO</div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Feedback</a></li>
+        </ul>
     </nav>
 </body>
 </html>
