--- a/RIBOflaskapp/templates/search_results.html
+++ b/RIBOflaskapp/templates/search_results.html
@@ -21,9 +21,8 @@
         <label for="db"> db format</label><br>
         <input class="check_button_format" type="checkbox" id="db_nh" value="nH.db">
         <label for="db_nh"> db-nH format</label><br>
-        <button type="button"  id="dl_button" onclick="download_file_from_db(), download_csv_from_db()">Download</button>
-        <progress id="progress_bar" value=gino_value max="100" min="0" ></progress>
-        <p>{{ gino_value }}</p>
+        <button type="button"  id="dl_button" onclick="final_download()">Download</button>
+        <!--<progress id="progress_bar" value=gino_value max="100" min="0" ></progress>-->
 
     </div>
     <div id="choose_taxonomy_div">
