--- a/RIBOflaskapp/templates/base.html
+++ b/RIBOflaskapp/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="nav">
-        {% include "nav_bar.html" %}
+        {% include "nav_bar_giusta.html" %}
     </div>
     <div class="container">
         {% block content %} {% endblock %}
