--- a/RIBOflaskapp/templates/search.html
+++ b/RIBOflaskapp/templates/search.html
@@ -3,16 +3,11 @@
         Search
     {% endblock %}
 
-
 {% block content %}
-    <h1>Search:</h1>
+    <h1>Search</h1>
     <div id="search_box">
         <form name="RegForm" action="/search/res/" method="POST" autocomplete="on">
             <table id="search_table">
-                <colgroup>
-                    <col span="2" id="first_col">
-                    <col span="3" id="second_col">
-                </colgroup>
                 <tr>
                     <td><a>Organism name:</a></td>
                     <td><input type="text" name="Organism name" placeholder="Organism name" size="20"></td>
@@ -20,25 +15,25 @@
                     <td><input type="text" name="Accession number" placeholder="Accession number" size="20"></td>
                 </tr>
                 <tr>
-                    <td><a>Number of decoupled nucleotides:</a></td>
-                    <td><input type="number" name="Number of decoupled nucleotides" placeholder="Decoupled nucleotides"></td>
+                    <td><a>Unpaired Bases:</a></td>
+                    <td><input type="number" name="Number of decoupled nucleotides" placeholder="Unpaired Bases"></td>
                     <td><a>Number of weak bonds:</a></td>
-                    <td><input type="number" name="Number_of_weak_bonds_from" placeholder="From">
-                    <input type="number" name="Number_of_weak_bonds_to" placeholder="To"></td>
+                    <td><input type="number" name="Number_of_weak_bonds_from" id="weak_f" placeholder="From">
+                    <input type="number" name="Number_of_weak_bonds_to" id="weak_t" placeholder="To"></td>
                 </tr>
                 <tr>
                     <td><a>Shape:</a></td>
                     <td><input type="text" name="Shape" placeholder="Shape"></td>
                     <td><a>Length:</a></td>
-                    <td><input type="number" name="Length_from" placeholder="From">
-                    <input type="number" name="Length_to" placeholder="To"></td>
+                    <td><input type="number" name="Length_from" id="leng_f" placeholder="From">
+                    <input type="number" name="Length_to" id="leng_t" placeholder="To"></td>
                 </tr>
                 <tr>
                     <td><a>Is Pseudoknotted:</a></td>
                     <td><select  name="Is Pseudoknotted" >
                         <option value=''>---</option>
-                        <option value="Yes">Yes</option>
-                        <option value="No">No</option>
+                        <option value="Y">Yes</option>
+                        <option value="N">No</option>
                     </select></td>
                     <td><a>Pseudoknot order:</a></td>
                     <td><input type="number" name="Pseudoknot order" placeholder="Pseudoknot order"></td>
@@ -49,6 +44,16 @@
                     <td><input type="text" name="Core" placeholder="Core"></td>
                     <td><a>Core plus:</a></td>
                     <td><input type="text" name="Core plus" placeholder="Core plus"></td>
+                </tr>
+                <tr>
+                    <td><a>Is Validated:</a></td>
+                    <td><select  name="Is Validated">
+                        <option value=''>---</option>
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select></td>
+                    <td><a>Database:</a></td>
+                    <td><input type="text" name="Database" placeholder="Database"></td>
                 </tr>
                 <tr>
                     <td><a>Genus:</a></td>
@@ -92,10 +97,10 @@
                 </tr>
             </table>
             <div id="search_button_div">
-                <button type="submit">Search</button>
-                <button type="Reset" value="Reset">Reset</button>
+                <button type="submit" id="search_button">Search</button>
+                <button type="Reset" value="Reset" id="reset_button">Reset</button>
+                <button onclick="location.href='{{ url_for('s_tutorial') }}'" type="button"> Search Tutorial </button>
             </div>
         </form>
     </div>
-
 {% endblock %}
